<resources>
<string name="app_name">Screen comments</string>
<string name="service_label">Screen comments TalkBack emulator</string>
<string name="service_label_main">Screen comments</string>

<string name="service_summary">Simple screen reader</string>
<string name="service_description">
Emulate TalkBack for all apps.
</string>
<string name="service_description_main">
Simple screen reader for Android.
</string>
<string name="service_on">Screen comments enabled</string>
<string name="service_off">Screen comments disabled</string>
<string name="state_on">On.</string>
<string name="state_off">Off.</string>
<string name="state_checked">Checked.</string>
<string name="state_not_checked">Not checked.</string>
<string name="state_enabled">Enabled.</string>
<string name="state_disable">Disable.</string>
<string name="state_selected">Selected.</string>
<string name="state_not_selected">Not selected.</string>
<string name="role_editable">Input</string>
<string name="role_password">Password</string>
<string name="role_button">Button</string>
<string name="role_checkbox">Checkbox</string>
<string name="role_switch">Switch</string>
<string name="role_image">Image</string>
<string name="role_list">List</string>
<string name="role_list_item">List item</string>
<string name="role_table">Table</string>
<string name="role_slider">Slider</string>
<string name="role_progress">Progress bar</string>
<string name="role_webview">Website</string>
<string name="role_title">Title</string>
<string name="device_locked">Device locked</string>
<string name="device_unlocked">Device unlocked</string>
<string name="no_label">No label</string>
<string name="window">Window</string>
<string name="screen_backlight_enabled">Screen backlight enabled</string>
<string name="screen_backlight_disabled">Screen backlight disabled</string>
<string name="drag_started">Drag started</string>
<string name="drag_cancelled">Drag cancelled</string>
<string name="drag_stopped">Drag stopped</string>
<string name="collapsed">Collapsed</string>
<string name="expanded">Expanded</string>
<string name="opens_pop_up_window">Opens pop-up window</string>
<string name="keyboard_hidden">Keyboard hidden</string>
<string name="picture_in_picture_mode">Picture-in-picture mode</string>
<string name="battery_level">Battery level: </string>
<string name="app_menu">Menu</string>
<string name="cancel">Cancel</string>
<string name="dev_menu">Developer menu</string>
<string name="close">Close</string>
<string name="special_actions">Special actions</string>
<string name="all_actions">All actions</string>
<string name="action_focus">Focus</string>    
<string name="action_clear_focus">Clear Focus</string>    
<string name="action_select">Select</string>    
<string name="action_clear_selection">Clear Selection</string>    
<string name="action_click">Click</string>    
<string name="action_long_click">Long Click</string>    
<string name="action_accessibility_focus">Accessibility Focus</string>    
<string name="action_clear_accessibility_focus">Clear Accessibility Focus</string>    
<string name="action_next_at_movement_granularity">Next at Movement Granularity</string>    
<string name="action_previous_at_movement_granularity">Previous at Movement Granularity</string>    
<string name="action_next_html_element">Next HTML Element</string>    
<string name="action_previous_html_element">Previous HTML Element</string>    
<string name="action_scroll_forward">Scroll Forward</string>    
<string name="action_scroll_backward">Scroll Backward</string>    
<string name="action_cut">Cut</string>    
<string name="action_copy">Copy</string>    
<string name="action_paste">Paste</string>    
<string name="action_set_selection">Set Selection</string>    
<string name="action_expand">Expand</string>    
<string name="action_collapse">Collapse</string>    
<string name="action_set_text">Set Text</string>    
<string name="action_dismiss">Dismiss</string>    
<string name="action_context_click">Context Click</string>    
<string name="action_drag_cancel">Drag Cancel</string>    
<string name="action_drag_start">Drag Start</string>    
<string name="action_drag_drop">Drag Drop</string>    
<string name="action_hide_tooltip">Hide Tooltip</string>    
<string name="action_ime_enter">IME Enter</string>    
<string name="action_move_window">Move Window</string>    
<string name="action_page_down">Page Down</string>    
<string name="action_page_left">Page Left</string>    
<string name="action_page_right">Page Right</string>    
<string name="action_page_up">Page Up</string>    
<string name="action_press_and_hold">Press and Hold</string>    
<string name="action_scroll_down">Scroll Down</string>    
<string name="action_scroll_left">Scroll Left</string>    
<string name="action_scroll_right">Scroll Right</string>    
<string name="action_scroll_to_position">Scroll to Position</string>    
<string name="action_scroll_up">Scroll Up</string>    
<string name="action_set_progress">Set Progress</string>    
<string name="action_show_on_screen">Show on Screen</string>    
<string name="action_show_tooltip">Show Tooltip</string>
<string name="action_unknown">Unknown</string>
<string name="empty">Empty.</string>
<string name="read_from_next_element">Read from next element.</string>
<string name="main_menu">Main menu</string>
<string name="next_window">Next window</string>
<string name="previous_window">Previous window</string>
<string name="turn_on_screen_backlight">Turn on screen backlight</string>
<string name="turn_off_screen_backlight">Turn off screen backlight</string>
<string name="app_settings">App settings</string>
<string name="tts_settings">TTS settings</string>


</resources>
