<?xml version="1.0" encoding="utf-8"?>
<accessibility-service xmlns:android="http://schemas.android.com/apk/res/android"
    android:accessibilityEventTypes="typeAllMask"
    android:accessibilityFeedbackType="feedbackSpoken|feedbackHaptic|feedbackAudible"
    android:accessibilityFlags="flagDefault|flagReportViewIds|flagRequestFilterKeyEvents|flagEnableAccessibilityVolume|flagRetrieveInteractiveWindows|flagRequestShortcutWarningDialogSpokenFeedback"
    android:canRequestFilterKeyEvents="true"
    android:canRequestTouchExplorationMode="true"
    android:canControlMagnification="true"
    android:canRetrieveWindowContent="true"
    android:canRequestFingerprintGestures="true"
    android:label="@string/service_label_main"
    android:description="@string/service_description_main"
    android:summary="@string/service_summary"
    android:notificationTimeout="0"
    android:interactiveUiTimeout="10000"
    android:canPerformGestures="true"
    android:settingsActivity="kz.aisuluait.MainActivity"
    android:isAccessibilityTool="true" />
