<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#0000f1">
<TextView
android:id="@+id/pane_title"
android:text="@string/app_menu"
android:textSize="27sp"
android:textColor="#ffffff"
android:gravity="center_vertical|center_horizontal"
android:background="#0000a1"
android:layout_width="match_parent"
android:layout_height="35sp"
/>
<ListView
android:id="@+id/list"
android:layout_width="match_parent"
android:layout_height="0dp"
android:layout_weight="1"/>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal">
<Button
android:id="@+id/cancel"
android:background="#00000f"
android:gravity="center_vertical|center_horizontal"
android:layout_width="0dp"
android:layout_weight="0.5"
android:layout_height="wrap_content"
android:text="@string/cancel"
android:textAllCaps="false"
android:textSize="24sp"
android:textColor="#ffffff"
/>
<Button
android:id="@+id/close"
android:background="#00000f"
android:gravity="center_vertical|center_horizontal"
android:layout_width="0dp"
android:layout_weight="0.5"
android:layout_height="wrap_content"
android:text="@string/close"
android:textAllCaps="false"
android:textSize="24sp"
android:textColor="#ffffff"
/>
</LinearLayout>
</LinearLayout>
